app/assets/stylesheets/_board.scss
/* ... */
.hb-task-column .hb-column-header {
  @extend .arrow;
}

.column .cards {
  margin:0;
  padding: 0;
}
.backlog {
    .dim {
      opacity: 0.4;
    }
    .active {
    }
    .filter-hidden {
      cursor: default;
      border:0;
      padding:0;
      margin:0;
      height:0;
      .ember-view {
        display: none;
      }
    }
}
.board {
  @include user-select(none);
    .dim {
      opacity: 0.4;
      @include transition (opacity 0.6s, ease-out);
      @include transition (filter 0.6s, ease-out);
      @include prefixer(filter, grayscale(100%) opacity(40%));
      @include box-shadow(inset 0 0px 1px rgba(0,0,0, 0.3));
      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
    }
    .active {
    }

    .filter-hidden {
      cursor: default;
      padding:0;
      margin:0;
      height:0;
      border:0;
      padding-bottom: 5px;
      margin-bottom: 15px;
      .ember-view {
        display: none;
      }
      .card-header {
        display: none;
      }
      .card-labels {
        display: none;
      }

    }
    .filter-hidden + .filter-hidden {
      padding:0;
      margin:0;
    }

}

.column {
  .is-draggable {
    cursor:pointer;
  }
  .ui-sortable-helper {
    cursor: move;
    cursor: -webkit-grabbing;
    cursor: -moz-grabbing;
    cursor: -ms-grabbing;
    cursor: grabbing;
    @include transform(rotate(3deg));
  }
}

.card {
  &.task-card {
    display: inline-block;
    width: 96%;
  }
  cursor:pointer;
  list-style: none;
  padding: 5px 5px 6px 5px;
  margin-bottom: 10px;
  position:relative;
  background-color: #fff;
  border: 1px solid #e5e5e5;
  border-bottom-color: darken(#e5e5e5, 5%); 
  @include transform(translateZ(0));
  .hb-avatar-tooltip {
    position: static;
  }

  &.border {
    border-top-color: #e5e5e5;
    border-right-color: #e5e5e5;
    border-bottom-color: #e5e5e5;
    border-left-width: 3px;
  }

  &.closable {
    background-color: #f5f5f5;
    .actions-close {
      display:block;
    }
  }
  .actions-close {
    display:none;
  }
  
  .hb-action {
    position: absolute;
    width: 100%;

    button {
      opacity: 0.3;
      position: absolute;
      top:0;
      left: 0;
      bottom: 0;
      right: 0;
      width: 100px;
      height: 30px;
      margin:auto;
      @include transition(opacity 0.2s);
    }
  }
  &:hover {
    .hb-action {
        button {
        opacity: 1;
      }
    }
  }


  &.assignee-accept {
     border-color: #0069D6;
  }
  &.assignee-error {
     border-color: red;
  }
  .card-labels {
    position: relative;
    padding-left: 4px;
    .card-label-wrapper {
      float:left;
      margin-right: 5px;
      padding-bottom: 4px;
      .card-label.active.large {
        position: relative;

        padding: 0px 8px;
        font-size: 12px;

        border-style: solid;
        border-width: 1px;
        border-radius: 2px;
      }
    }
  }

  .card-header {
    padding-bottom: 4px;
    color: $darkGrey;

    &.task-card {
      clear: left;
      float: left;
      width: 85%;
    }
  }
  .title {
    white-space: normal;
    text-overflow: clip;
    overflow: visible;
    padding-left: 4px;
  }         
  .milestone {
    color: $lightGrey;
    font-size:11px;
  }         
  img {
    max-width: 24px;
  }          
  .number {
    position: relative;
    vertical-align: bottom;
    right: 4px;
    top: 4px;
    font-size:1em;
    color: $lightGrey;
  }               
  .type {
    position: relative;
    float: left;
    top: 2px;

    i {
      font-size: 14px;
      padding: 4px;
      color: $hb-purple;
    }
  }
  .card-right-wrapper {
    position: absolute;
    right: 0px;
    bottom: 0px;
    float: right;
    height: 100%;
    .card-right {
      position: relative;
      height: 100%;

      .hb-avatar-tooltip {
        position: absolute;
        bottom: 0px;
        right: 0px;
        padding: 5px;
      }
    }
  }
  .card-details-wrapper {
    clear: left;
    margin-left: 2px;

    i {
      padding: 0px 4px 0px 2px;
      vertical-align: text-bottom;
    }

    .comment-count {
      float: left;
      color: $lightGrey;
    }

    .linked-repo {
      float: left;
      padding-left: 6px;
    }
  }

  &.card--milestone {
    &.border {
      padding-left: 6px;
    }
    padding-top: 0px;
    padding-bottom: 5px;
    margin-bottom: 5px;
    &.filter-hidden + &.filter-hidden {
      padding-bottom: 0px;
      margin-bottom: 0px;
      cursor: none;
    }
    .hb-avatar-tooltip {
      &:hover {
        p {
          display: inline-table;
          visibility: visible;
        }
      }
      p {
        bottom: 42px;
        top: 5px;
        left: 34px;
        line-height: 16px;
        &:after {
          content: "\25C0";
          color: $hb-purple;
          left: -6px;
          bottom: 1px;
        }
      }
      display: inline;
      img {
        position: static;
      }
    }
    .card-header {
      border-bottom: none;
      padding: 5px 0px;
    }
    .title {
      padding-left: 0px;
    }
    .card-labels {
      padding: 5px 0px;
      position: absolute;
      bottom: auto;
      top: -8px;
      .card-label-wrapper {
        float:left;
        margin-right: 5px;
        .card-label {
          z-index: 10;
        }
        .card-label.active.small {
          height: 4px;
          width: 40px;
          display:block;
        }
        .card-label.active.large {
          position: relative;
          top: 6px;

          display: none;
          padding: 2px 10px;
          font-size: 12px;
        }
      }
      &:hover {
        .card-label.active.small {
          display: none;
        }
        .card-label.active.large {
          display:block;
        }
      }
    }
  }
}



.card a.close {
  position: absolute;
  top: 12px;
  right: 6px;
  width: 16px;
  opacity:0.0;
}
.card:hover a.close {
  opacity:0.3;
}
.card a.close:hover {
  opacity:0.5;
}

.card a small {
  color: $lightGrey;
  padding-right:2px;
}
/* ... */

